Create a class Cube that has a member Face

--- a/sandbox/Makefile
+++ b/sandbox/Makefile
@@ -3,7 +3,8 @@ CXX := g++
 
 all:
 	$(CXX) Face.cpp -o Face.o -c
-	$(CXX) main.cpp Face.o -o $(appfile)
+	$(CXX) Cube.cpp -o Cube.o -c
+	$(CXX) main.cpp Face.o Cube.o -o $(appfile)
 
 clean:
 	rm *.o
